# qr-wifi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  pyproject.toml
qr-wifi/: __main__.py
src/qr_wifi/: __init__.py  cli.py  exceptions.py  qr_generator.py  wifi.py
tests/: test_cli.py  test_qr_generator.py  test_wifi.py
