[project]
name = "qr-wifi"
version = "0.1.0"
description = "Generate QR codes for WiFi credentials with validation and configurable options"
readme = "README.md"
authors = [
    { name = "Unkn0wnN4m3", email = "87839850+Unkn0wnN4m3@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "qrcode[pil]>=8.2",
]

[project.scripts]
qr-wifi = "qr_wifi:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "ruff>=0.14.13",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
